Adicionado revisão e ajustes diversos

--- a/main.tex
+++ b/main.tex
@@ -66,6 +66,9 @@
 \def\@copyrightspace{\relax}
 \makeatother
 
+\usepackage{scalerel}
+\newcommand\myhash{$^{\scalerel*{\#}{ig}}$}
+
 \makeatletter
 \def\fnum@figure{Figura \thefigure}
 \def\fnum@table{Tabela \thetable}
