--- a/references.bib
+++ b/references.bib
@@ -234,7 +234,7 @@
     edition 	= {fourth}
 }
 
-@misc{melotti_2014,
+@misc{melotti2014,
 	title		= {CReAMA: Uma Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes.},
 	author		= {MELOTTI, M.},
 	url			= {http://repositorio.ufes.br/handle/10/4270},
@@ -250,7 +250,14 @@
     year    	= {2014}
 }
 
-@misc{moca_2004,
+@misc{lisandroprocedi,
+	author		= {Lisandro Procedi},
+	title   	= {Avaliação do Framework Xamarin.Forms Para Desenvolvimento de Aplicativos Móveis Multiplataforma, Criando Uma Aplicação Real.},
+	journal 	= {TCC, Ciência da Computação. Universidade Federal do Rio Grande do Sul},
+	year    	= {2016}
+}
+
+@misc{moca2004,
 	title		= {MoCA: Uma Arquitetura para o Desenvolvimento de Aplicações Sensíveis ao Contexto para Dispositivos Móveis},
 	author		= {Rodrigues, Vagner José do Sacramento},
 	url = {http://eds.a.ebscohost.com/eds/detail/detail?vid=1&sid=9e4ec8d5-8c8d-4a45-a23b-b66b66521b42%40sessionmgr4007&bdata=Jmxhbmc9cHQtYnImc2l0ZT1lZHMtbGl2ZSZzY29wZT1zaXRl#db=cat04685a&AN=puc.168116},
