--- a/sections/3-trabalhos-relacionados.tex
+++ b/sections/3-trabalhos-relacionados.tex
@@ -11,75 +11,51 @@
 Nesta seção, serão apresentados os trabalhos relacionados com este projeto. Para cada trabalho relacionado, será descrito um resumo extraído do próprio artigo ou monografia e no final de cada subseção, será exibido uma tabela comparando as principais características deste projeto com o trabalho relacionado.\par
 
 %artigo 1%
-\textbf{Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes} \cite{melotti_2014}
-\par
+\textbf{Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes} \cite{melotti2014}.\par
 A arquitetura de referência proposta, denominada CReAMA – \textit{Component-Based Reference Architecture for Collaborative Mobile Applications}, teve como principal objetivo orientar o desenvolvimento de sistemas colaborativos móveis baseados em componentes para a plataforma Android. Sistemas desenvolvidos de acordo com essa arquitetura, devem dar suporte ao desenvolvimento de componentes e à criação de aplicações colaborativas por meio da composição desses componentes.\par
+
 As aplicações e componentes são desenvolvidos para plataformas móveis, facilitando o uso de recursos inerentes a essas plataformas, tais como informações de sensores embarcados. Com base na arquitetura de referência, o desenvolvedor poderá ser guiado para criar componentes e compor novas aplicações seguindo os padrões estabelecidos. Por exemplo, será possível construir \textit{toolkits} que forneçam componentes para um domínio específico. É importante ressaltar que a arquitetura foi definida considerando-se: aspectos da plataforma móvel, de sistemas colaborativos e da própria orientação a componentes. Com relação à plataforma móvel, optou-se por uma plataforma específica, visando-se a definição de uma arquitetura otimizada para as características da respectiva plataforma.\par
 
-O trabalho proposto por Maison Melotti se relaciona com este trabalho pelo fato de terem objetivos semelhantes, que é propor uma arquitetura para facilitar o desenvolvimento de aplicativos móveis, permitindo o reuso facilitado de componentes. Apesar de estarem focados em domínios diferentes, os trabalhos se relacionam no atendimento de três requisitos funcionais: o cache de dados (persistência local); notificações do aplicativo (local e \textit{push notification}) e acesso a rede. A tabela a seguir, apresenta as principais características deste trabalho com o trabalho de Melotti.
-
-\begin{table}[H]
-% O \small reduz o font-size da tabela
-\small
-\centering
-\begin{tabular}{|c|c|c|}
-\hline
-Recurso & Este trabalho & CReAMA \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte multiplataforma\\ mobile Android e iOS\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ plataforma desktop\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê recursos extensíveis\\ através de plugins\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de rede (HTTP), banco de dados e UI\end{tabular} & Sim & Sim \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ reuso de componentes\end{tabular} & Sim & Sim \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ comunicação por eventos\end{tabular} & Sim & Não \\ \hline
-\end{tabular}
-\caption{Tabela comparativa desta arquitetura com \textit{CReAMA}.}
-\end{table}
+O trabalho proposto por Maison Melotti se relaciona com este trabalho pelo fato de terem objetivos semelhantes, que é propor uma arquitetura para facilitar o desenvolvimento de aplicativos móveis, permitindo o reuso facilitado de componentes. Apesar de estarem focados em domínios diferentes, os trabalhos se relacionam no atendimento de três requisitos funcionais: o cache de dados (persistência local); notificações do aplicativo (local e \textit{push notification}) e acesso a rede.\par
 
 
 %artigo 2%
-\textbf{MoCA: Arquitetura para o Desenvolvimento de Aplicações Sensíveis ao Contexto para Dispositivos Móveis} \cite{moca_2004}\par
+\textbf{MoCA: Arquitetura para o Desenvolvimento de Aplicações Sensíveis ao Contexto para Dispositivos Móveis} \cite{moca2004}.\par
 \textit{MoCA} (\textit{Mobile Collaboration Architecture}) é uma arquitetura que oferece recursos para o desenvolvimento de aplicações distribuídas sensíveis ao contexto que envolvem usuários móveis. Esses recursos incluem um serviço para a coleta, armazenamento e distribuição de informações de contexto e um serviço de inferência de localização de dispositivos móveis. Além disso, a arquitetura provê APIs para o desenvolvimento de aplicações que interagem com estes serviços como consumidores de informações de contexto. Os serviços providos pela \textit{MoCA} livram o programador da obrigação de implementar serviços específicos para a coleta e tratamento de contexto.\par
+
 O conjunto de APIs oferecidas pela \textit{MoCA} para desenvolvimento de aplicações compreende três grupos: as APIs de comunicação, que fornecem interfaces de comunicação síncrona e assíncrona (componentes de \textit{UI} que utilizam eventos); as APIs principais que fornecem interfaces de comunicação com os serviços básicos da arquitetura; e as APIs opcionais que facilitam o desenvolvimento de aplicações baseadas na arquitetura cliente-servidor.\par
 
-A relação deste trabalho com a arquitetura proposta em \textit{MoCA} pode ser entendida pelo uso do estilo arquitetural \textit{Event Based}, além provê APIs de alto nível para operações de rede, persistência de dados no dispositivo e notificações do aplicativo. No entando, \textit{MoCa} foi construído para trabalhar com um servidor próprio, atendendo requisições específicas de seu domínio, enquanto que esta arquitetura propõe um modelo de comunicação cliente-servidor através de serviços \textit{RESTFul}. A tabela a seguir, apresenta as principais características deste trabalho com a arquitetura \textit{MoCA}.
-
-\begin{table}[H]
-\small
-\centering
-\begin{tabular}{|c|c|c|}
-\hline
-Recurso & Este trabalho & MoCA \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte multiplataforma\\ mobile Android e iOS\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ plataforma desktop\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê recursos extensíveis\\ através de plugins\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de rede (HTTP), banco de dados e UI\end{tabular} & Sim & Sim \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ reuso de componentes\end{tabular} & Sim & Sim \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ comunicação por eventos\end{tabular} & Sim & Sim \\ \hline
-\end{tabular}
-\caption{Tabela comparativa desta arquitetura com \textit{MoCA}.}
-\end{table}
+A relação deste trabalho com a arquitetura proposta em \textit{MoCA} pode ser entendida pelo uso do estilo arquitetural \textit{Event Based}, além provê APIs de alto nível para operações de rede, persistência de dados no dispositivo e notificações do aplicativo. No entando, \textit{MoCa} foi construído para trabalhar com um servidor próprio, atendendo requisições específicas de seu domínio, enquanto que esta arquitetura propõe um modelo de comunicação cliente-servidor através de serviços \textit{RESTful}.\par
 
 
 %artigo 3%
-\textbf{Solução Multiplataforma para Smartphone Utilizando os Frameworks SenchaTouch e PhoneGap Integrado à web service Java} \cite{jauridacruzjunior}\par
+\textbf{Solução Multiplataforma para Smartphone Utilizando os Frameworks SenchaTouch e PhoneGap Integrado à web service Java} \cite{jauridacruzjunior}.\par
 O trabalho teve como objetivo principal, realizar análise e estudo sobre as tecnologias de desenvolvimento de aplicativos móveis multiplataforma, utilizando a junção dos frameworks \textit{PhoneGap} e \textit{Sencha Touch}. Os aplicativos desenvolvidos usando o \textit{PhoneGap} são aplicações híbridas onde partes do aplicativo, principalmente a interface do usuário, a lógica da aplicação e a comunicação com um servidor, é baseado em HTML, Javascript e CSS. A outra parte, que se comunica com o sistema operacional do dispositivo é baseada no idioma nativo de cada plataforma, ou seja, \textit{Java} no android e \textit{Objective C} no iOS.\par
 O estudo propôs uma modelagem facilitada de integração com outro sistema por meio de serviços web, através de uma aplicação \textit{RESTFul} utilizando Java EE. Com a análise das ferramentas e tecnologias levantadas, pode-se concluir que o desenvolvimento de aplicativos utilizando os frameworks \textit{PhoneGap} e \textit{Sencha Touch} tem muitas vantagens. Uma delas é a facilidade de portar o aplicativo para qualquer plataforma móvel. O  \textit{PhoneGap} dispõe uma arquitetura \textit{MVC} e diversos componentes para acesso a recursos do dispositivo, como câmera, acelerômetro e GPS através de objetos javascript. O \textit{Sencha Touch} dispõe de objetos focado em UI, principalmente suporte a eventos de toque na tela.\par
 
-O trabalho realizado por Jauri da Cruz Junior se relaciona com esta arquitetura como um estudo comparativo dos recursos provido pelo Qt com o \textit{PhoneGap}. Identificou-se que o \textit{PhoneGap} possui APIs para o \textit{build} do aplicativo nas plataformas mobile e dispõe de uma API de alto nível em Javascript para o desenvolvedor utilizar os recursos do dispositivo independente da plataforma. Os recursos podem ser desde a câmera do aparelho até notificações do sistema. No entanto, o \textit{PhoneGap} não possui componentes de interface prontos para serem adicionadas na aplicação, por isso no trabalho de Jauri foi utilizado outro framework para composição das telas. A tabela a seguir, apresenta as principais características deste trabalho com o trabalho de Jauri.
+O trabalho realizado por Jauri da Cruz Junior se relaciona com esta arquitetura como um estudo comparativo dos recursos provido pelo Qt com o \textit{PhoneGap}. Identificou-se que o \textit{PhoneGap} possui APIs para o \textit{build} do aplicativo nas plataformas mobile e dispõe de uma API de alto nível em Javascript para o desenvolvedor utilizar os recursos do dispositivo independente da plataforma. Os recursos podem ser desde a câmera do aparelho até notificações do sistema. No entanto, o \textit{PhoneGap} não possui componentes de interface prontos para serem adicionadas na aplicação, por isso no trabalho de Jauri foi utilizado outro framework para composição das telas.\par
 
-\begin{table}[H]
-\small
-\centering
-\begin{tabular}{|c|c|c|}
-\hline
-\thead{Recurso} & \thead{Este trabalho} & \thead{Trabalho \\ de Jauri} \\
-\hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte multiplataforma\\ mobile Android e iOS\end{tabular} & Sim & Sim \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ plataforma desktop\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê recursos extensíveis\\ através de plugins\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de rede (HTTP), banco de dados e UI\end{tabular} & Sim & Sim \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ reuso de componentes\end{tabular} & Sim & Sim \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ comunicação por eventos\end{tabular} & Sim & Sim \\ \hline
-\end{tabular}
-\caption{Tabela comparativa desta arquitetura com a Solução Multiplataforma \textit{PhoneGap}/\textit{SenchaTouch} proposto por Jauri Junior.}
-\end{table}
+
+%artigo 4%
+\textbf{Avaliação do Framework Xamarin.Forms Para Desenvolvimento de Aplicativos Móveis Multiplataforma} \cite{lisandroprocedi}.\par
+Como consequência do aumento de dispositivos móveis, foram criados diferentes sistemas operacionais para gerenciar tais dispositivos. Na tentativa de atingir o maior número de usuários, os desenvolvedores de aplicativos móveis têm que compreender as características de cada plataforma, dentre elas a linguagem, bibliotecas, IDEs e APIs. Disponibilizar um aplicativo para mais de uma plataforma ou dispositivo móvel requer tempo, experiência e pode acabar custando mais do que o estimado. A plataforma \textit{Xamarin} permite que desenvolvedores criem aplicativos multiplataforma nativos usando o mesmo código base, apenas implementando uma interface para cada sistema alvo. Como forma de reduzir ainda mais a necessidade de desenvolvimento específico de interface de usuário, um novo modelo de framework para desenvolvimento surgiu no mercado – o \textit{Xamarin.Forms} – e assegura que é possível resolver esses obstáculos com apenas uma implementação. O propósito geral deste trabalho é explorar o framework multiplataforma \textit{Xamarin.Forms}, a fim de verificar a eficiência do modelo de desenvolvimento onde a escrita do código é feita em uma única linguagem, e o aplicativo resultante pode ser executado em diferentes plataformas móveis, tais como o Android e o iOS. Além disso, avaliou-se como o \textit{Xamarin.Forms} torna transparente os detalhes de implementação de cada plataforma, e também, se existem áreas onde o desenvolvedor deve conhecer mais a fundo a plataforma onde o aplicativo final vai ser implantado. Para tanto, este trabalho descreve o desenvolvimento de um aplicativo para a interpretação de laudos de análise de solo com um único código base, mas que executa nas principais plataformas móveis existentes no mercado.\par
+
+O trabalho apresentado por Lisandro, relaciona-se com este artigo pelo fato de ambos terem desenvolvido APIs de utilizarem outros frameworks para o desenvolvimento do projeto. Enquanto que nesta arquitetura optou-se pelo Qt que utiliza a linguagem C++, o trabalho de Lisando utilizou o \textit{Xamarin} que utiliza a linguagem C\myhash. Alguns recursos Disponibilizados pelo Qt também estão disponíveis no \textit{Xamarin}. No entanto, o trabalho de Lisandro não focou em entregar um aplicativo genérico que pudesse ser reaproveitado para outros aplicativos, mais fez uso dos mesmos recursos disponibilizados nesta arquitetura.\par
+
+A tabela 1 apresenta um comparativo dos recursos disponibilizados na arquitetura descrita neste artigo com os trabalhos relacionados descritos anteriormente.
+
+\begin{table*}[t]
+	\centering
+	\begin{tabular}{|c|c|c|c|c|c|}
+		\hline
+		Recurso & Este trabalho & CReAMA & MoCA & \begin{tabular}[c]{@{}c@{}}Trabalho de Jauri com\\ SenchaTouch e PhoneGap\end{tabular} & \begin{tabular}[c]{@{}c@{}}Trabalho de Lisandro\\ utilizando o Xamarin.Forms\end{tabular} \\ \hline
+		\begin{tabular}[c]{@{}c@{}}Provê suporte multiplataforma\\ Android e iOS\end{tabular} & Sim & Não & Não & Sim & Sim \\ \hline
+		Provê suporte a plataforma desktop & Sim & Não & Não & Não & Não \\ \hline
+		\begin{tabular}[c]{@{}c@{}}Provê suporte a recursos\\ extensíveis através de plugins\end{tabular} & Sim & Não & Não & Não & Não \\ \hline
+		\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de rede (HTTP), banco de dados e UI\end{tabular} & Sim & Sim & Sim & Sim & Sim \\ \hline
+		Provê suporte a reuso de componentes & Sim & Sim & Sim & Sim & Sim \\ \hline
+		\begin{tabular}[c]{@{}c@{}}Provê suporte a comunicação\\ entre objetos através de eventos\end{tabular} & Sim & Não & Sim & Sim & Sim \\ \hline
+	\end{tabular}
+	\centering
+	\caption{Tabela comparativa entre este trabalho e os relacionados}
+\end{table*}
